external_gateway/demo_03/manifests/store.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: store
  name: store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: store
  name: store-svc
spec:
  selector:
    app: store
  ports:
  - port: 8080
    targetPort: 8080
