external_gateway/demo_03/manifests/job-routes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: jobs-external
  namespace: jobs
spec:
  parentRefs:
  - kind: Gateway
    name: https-ext-gtw
    namespace: infra
  hostnames:
  - "jobs.mystore.com"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: jobs-svc
      port: 8080
      # namespace: mobile
